files: fixed spacing for path inputs
--HG--
branch : new-ui

--- a/rhodecode/public/css/main.less
+++ b/rhodecode/public/css/main.less
@@ -2368,10 +2368,13 @@ h3.files_location{
     display: flex;
     margin: 0;
     padding: 0;
+    width: 100%;
   }
+
   li {
     list-style-type: none;
   }
+
 }
 
 .editor-items {
